--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rtc.patcharee.unchittha.crosswordgame.MainActivity"
-    android:background="@drawable/bg1">
+    android:background="@drawable/bgn">
 
     <ImageView
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/head1"
-
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent" />
-
-    <ImageView
-        app:srcCompat="@drawable/startfour"
+        app:srcCompat="@drawable/play"
         android:id="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_height="100dp"
-        android:layout_marginTop="500dp"
-        android:layout_width="340dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_height="120dp"
+        android:layout_width="110dp" />
 </RelativeLayout>
