--- a/app/src/main/res/layout/activity_how_to.xml
+++ b/app/src/main/res/layout/activity_how_to.xml
@@ -10,43 +10,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rtc.patcharee.unchittha.crosswordgame.HowToActivity"
-    android:background="@drawable/bg1">
+    android:background="@drawable/howto">
 
     <ImageView
         android:layout_height="120dp"
-        app:srcCompat="@drawable/play_blue"
+        app:srcCompat="@drawable/play"
         android:id="@+id/imageView2"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_width="100dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/imageView2"
-        android:layout_below="@+id/imageView5"
-        android:layout_margin="20dp"
-        android:background="?attr/colorBackgroundFloating">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="15dp">
-
-            <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView"
-                android:textSize="18sp"
-                android:textColor="@android:color/black" />
-        </LinearLayout>
-    </ScrollView>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/head1"
-        android:id="@+id/imageView5" />
 </RelativeLayout>
