--- a/app/src/main/res/layout/activity_play2.xml
+++ b/app/src/main/res/layout/activity_play2.xml
@@ -9,14 +9,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rtc.patcharee.unchittha.crosswordgame.Play2Activity"
-    android:background="@drawable/pg">
+    android:background="@drawable/levell1">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
+    <Button
+        android:text="ANSWER"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="normal|bold" />
+        android:id="@+id/button4"
+        android:layout_marginTop="550dp"
+        android:fontFamily="casual"
+        android:textSize="22sp"
+        android:background="@android:color/holo_red_light"
+        android:layout_centerHorizontal="true"
+        android:textColor="#faf7f7"
+        android:layout_width="200dp" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/editText8" />
+    </RelativeLayout>
 </RelativeLayout>
