--- a/app/src/main/res/layout/activity_play2.xml
+++ b/app/src/main/res/layout/activity_play2.xml
@@ -13,25 +13,312 @@
 
     <Button
         android:text="ANSWER"
-        android:layout_height="wrap_content"
         android:id="@+id/button4"
-        android:layout_marginTop="550dp"
         android:fontFamily="casual"
         android:textSize="22sp"
-        android:background="@android:color/holo_red_light"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#faf7f7"
-        android:layout_width="200dp" />
+        android:layout_width="130dp"
+        android:layout_height="50dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="420dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/editText8" />
+            android:maxLength="1"
+            android:id="@+id/v1edit1"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="22dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/v1edit2"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginTop="71dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/v1edit3"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="106dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText11"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="53dp"
+            android:layout_marginTop="106dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText12"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="106dp"
+            android:layout_marginLeft="85dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText13"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="106dp"
+            android:layout_marginLeft="118dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText14"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:background="@android:color/transparent"
+            android:layout_alignBaseline="@+id/editText13"
+            android:layout_alignBottom="@+id/editText13"
+            android:layout_alignRight="@+id/editText40"
+            android:layout_alignEnd="@+id/editText40" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText15"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="73dp"
+            android:layout_marginLeft="117dp"
+            android:layout_height="40dp"
+            android:layout_width="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText16"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="36dp"
+            android:layout_marginLeft="118dp"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText17"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="117dp"
+            android:layout_marginTop="141dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText18"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="117dp"
+            android:layout_marginTop="173dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText19"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="118dp"
+            android:layout_marginTop="207dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText20"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="173dp"
+            android:layout_marginLeft="85dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText21"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="147dp"
+            android:layout_marginTop="173dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText22"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="173dp"
+            android:layout_marginLeft="180dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText23"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="139dp"
+            android:layout_marginLeft="180dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText24"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="173dp"
+            android:layout_marginLeft="211dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText25"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="173dp"
+            android:layout_marginLeft="243dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText26"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="173dp"
+            android:layout_marginLeft="272dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText27"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="245dp"
+            android:layout_marginTop="140dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText28"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="242dp"
+            android:layout_marginTop="110dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText29"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginLeft="242dp"
+            android:layout_marginTop="73dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:id="@+id/editText30"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="242dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent" />
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText31"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="73dp"
+            android:layout_marginLeft="200dp"
+            android:background="@android:color/transparent"/>
+
+
     </RelativeLayout>
+
 </RelativeLayout>
