--- a/app/src/main/res/layout/activity_play3.xml
+++ b/app/src/main/res/layout/activity_play3.xml
@@ -8,6 +8,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="rtc.patcharee.unchittha.crosswordgame.Play3Activity">
+    tools:context="rtc.patcharee.unchittha.crosswordgame.Play3Activity"
+    android:background="@drawable/levell2">
+
+    <Button
+        android:text="ANSWER"
+        android:layout_height="50dp"
+        android:id="@+id/button4"
+        android:layout_marginTop="580dp"
+        android:fontFamily="casual"
+        android:textSize="22sp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="130dp" />
 
 </RelativeLayout>
